--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
         <hibernate.version>5.4.22.Final</hibernate.version>
         <log4j.version>1.2.17</log4j.version>
-        <mysql.driver.version>8.0.22</mysql.driver.version>
+        <hsqldb.version>2.5.1</hsqldb.version>
         <junit.version>4.13.1</junit.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
     </properties>
@@ -51,9 +51,10 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.driver.version}</version>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
+            <version>${hsqldb.version}</version>
         </dependency>
 
         <dependency>
